Cálculo do ISI na classe SpikeTrain